# whatsnew

./: CMakeLists.txt  README.md  whatsnew.service  whatsnewWrapper
include/: whatsnew.h  whatsnewfile.h  whatsnewip.h
src/: whatsnew.cc  whatsnewConfig.h.in  whatsnewfile.cc  whatsnewip.cc
